# todo

./: .env.example  LICENSE  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README-deploy.md  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: auth.py  config.py  database.py  email_utils.py  exception_handler.py  main.py  models.py  schemas.py  utils.py
backend/app/routes/: auth.py  item.py  list.py  system.py  user.py  workspace.py
backend/app/schemas/: auth.py  item.py  list.py  user.py  workspace.py
backend/app/services/: oauth.py
backend/app/templates/: email_verification.html  email_verification_confirmation.html
frontend/: .dockerignore  .gitignore  Dockerfile
