[project]
name = "todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.1",
    "authlib>=1.7.2",
    "beanie<2.0",
    "fastapi-mcp>=0.4.0",
    "fastapi[standard]>=0.136.3",
    "itsdangerous>=2.2.0",
    "motor<3.7",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pymongo<4.10",
]

[dependency-groups]
dev = [
    "faker>=40.21.0",
    "pytest>=9.0.3",
    "pytest-html>=4.2.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
